<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".usuario.activity.CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cadastro_usuario_crie_sua_conta"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/txtCadastroNome"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/cadastro_usuario_nome"
            android:layout_marginTop="8dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txtCadastroEmail"
            android:hint="@string/cadastro_usuario_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/txtCadastroEmailConjuge"
            android:inputType="textEmailAddress"
            android:hint="@string/cadastro_usuario_email_conjuge"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/txtCadastroSenha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/cadastro_usuario_senha"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:onClick="cadastrarUsuario"
            android:text="@string/cadastro_usuario_cadastrar"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txtCadastrarLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:onClick="abrirTelaDeLogin"
            android:text="@string/cadastro_usuario_ja_tem_uma_conta"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>